Fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -10,64 +10,71 @@
 
 .logo-container {
     display: flex;
-    position: absolute;
-    flex-direction: column;
+position: fixed;
+    overflow: hidden;    flex-direction: column;
     z-index: 123;
     width: 100%;
     
 }
 
 #zon {
-    position: absolute;
-    top: -30px;
-    z-index: 15;
-    height: 100px;
+position: fixed;
+    overflow: hidden;    top: -30px;
+z-index: 21786317;    height: 100px;
 }
 
 #maan {
     display: none;
-    position: absolute;
-    top: -30px;
-    z-index: 15;
-    height: 100px;
+position: fixed;
+    overflow: hidden;    top: -30px;
+z-index: 21786317;    height: 100px;
 }
 
 .animaties img {
     height: 100px;
     position: absolute;
-    z-index: 15;
+    
 }
 
 #wolken  {
     display: flex;
     position: absolute;
+    overflow: hidden;    
     flex-direction: row;
     justify-content: flex-end;
     width: 100%;
     top: 100px;
     height: 100px;
+    z-index: 217863171;
 }
 
 #wolken2  {
-    position: absolute;
+    position: fixed;
+    overflow: inherit;
     top: 140px;
     height: 100px;
+    z-index: 217863171;
 }
 
 #wolken3 {
     display: flex;
-    position: absolute;
+    position: fixed;
     flex-direction: row;
     justify-content: flex-end;
     width: 100%;
     top: 80px;
     height: 100px;
+    overflow: hidden;
+    z-index: 21786317;
+    
 }
 
 #wolken4 {
-    position: absolute;
+    position: fixed;
+    overflow: inherit;    
     top: 110px;
     height: 100px;
+    z-index: 21786317;
 }
 
 .logo-container .logo {
